--- a/includes/etc/nginx/nginx.conf
+++ b/includes/etc/nginx/nginx.conf
@@ -21,6 +21,7 @@ http {
 	types_hash_max_size 2048;
 	server_tokens off;
 	client_max_body_size 0;
+	client_max_body_size 256M;
 
 	# server_names_hash_bucket_size 64;
 	# server_name_in_redirect off;
