Added /styleguide to nginx for malvit components

--- a/includes/etc/nginx/nginx-7.0.conf
+++ b/includes/etc/nginx/nginx-7.0.conf
@@ -36,6 +36,11 @@ http {
 		index index.php index.html;
 		server_name localhost;
 
+		# Malvit output
+		location /styleguide {
+			root /local/;
+		}
+
 		location / {
 			try_files $uri $uri/ @rewrites;
 		}
