Let nginx also listen on 8080
Due to some strange plugins which don't properly get the base-url

--- a/includes/etc/nginx/nginx-7.0.conf
+++ b/includes/etc/nginx/nginx-7.0.conf
@@ -29,6 +29,7 @@ http {
 
 	server {
 		listen 80 default_server;
+		listen 8080 default_server;
 		listen [::]:80 default_server;
 		client_max_body_size 512M;
 
