--- a/includes/etc/nginx/nginx-7.2.conf
+++ b/includes/etc/nginx/nginx-7.2.conf
@@ -29,6 +29,7 @@ http {
 
 	server {
 		listen 80 default_server;
+		listen 8080 default_server;
 		listen [::]:80 default_server;
 		client_max_body_size 512M;
 
