Simplify nginx config

--- a/includes/etc/nginx/nginx-7.4.conf
+++ b/includes/etc/nginx/nginx-7.4.conf
@@ -29,7 +29,6 @@ http {
 
 	server {
 		listen 80 default_server;
-		listen 8080 default_server;
 		listen [::]:80 default_server;
 		client_max_body_size 512M;
 
@@ -37,9 +36,9 @@ http {
 		index index.php index.html;
 		server_name localhost;
 
-		# Malvit output
-		location /styleguide {
-			root /local/;
+		location ~ ^/(css|js|img|fonts)/* {
+			rewrite ^(.*)\.[\d]+\.(css|js)$ $1.$2 last;
+			expires 30d;
 		}
 
 		location / {
@@ -47,35 +46,17 @@ http {
 		}
 
 		location @rewrites {
-			rewrite ^(.*)\.[\d]+\.(css|js)$ $1.$2 last;
-			rewrite ^\/vendor\/[\d]+\/(.*) /vendor/$1 last;
 			rewrite ^(.*) /index.php?p=$1 last;
 		}
 
-		location /de {
-			try_files $uri $uri/ @rewrites_de;
-		}
-
-		location @rewrites_de {
-			rewrite ^(.*) /de/index.php?p=$1 last;
-		}
-
-		location /en {
-			try_files $uri $uri/ @rewrites_en;
-		}
-
-		location @rewrites_en {
-			rewrite ^(.*) /en/index.php?p=$1 last;
-		}
-
 		location ~ \.php$ {
-			include snippets/fastcgi-php.conf;
-			fastcgi_pass unix:/run/php/php7.4-fpm.sock;
+			fastcgi_param HTTPS 'on';
+			try_files $uri =404;
+			fastcgi_split_path_info ^(.+\.php)(/.+)$;
+			fastcgi_pass unix:/var/run/php/php7.4-fpm.sock
 			fastcgi_read_timeout 300;
+			include fastcgi.conf;
 		}
 
-		location ~ /\.ht {
-			deny all;
-		}
 	}
 }
