Fix missing semicolon in nginx config

--- a/includes/etc/nginx/nginx-7.4.conf
+++ b/includes/etc/nginx/nginx-7.4.conf
@@ -53,7 +53,7 @@ http {
 			fastcgi_param HTTPS 'on';
 			try_files $uri =404;
 			fastcgi_split_path_info ^(.+\.php)(/.+)$;
-			fastcgi_pass unix:/var/run/php/php7.4-fpm.sock
+			fastcgi_pass unix:/var/run/php/php7.4-fpm.sock;
 			fastcgi_read_timeout 300;
 			include fastcgi.conf;
 		}
