Fix nginx config and optimize dockerfile

--- a/includes/etc/nginx/nginx-7.2.conf
+++ b/includes/etc/nginx/nginx-7.2.conf
@@ -36,26 +36,20 @@ http {
 		index index.php index.html;
 		server_name localhost;
 
-		location ~ ^/(css|js|img|fonts)/* {
-			rewrite ^(.*)\.[\d]+\.(css|js)$ $1.$2 last;
-			expires 30d;
-		}
-
 		location / {
 			try_files $uri $uri/ @rewrites;
 		}
 
 		location @rewrites {
+			rewrite ^(.*)\.[\d]+\.(css|js)$ $1.$2 last;
+			rewrite ^\/vendor\/[\d]+\/(.*) /vendor/$1 last;
 			rewrite ^(.*) /index.php?p=$1 last;
 		}
 
 		location ~ \.php$ {
-			fastcgi_param HTTPS 'on';
-			try_files $uri =404;
-			fastcgi_split_path_info ^(.+\.php)(/.+)$;
-			fastcgi_pass unix:/var/run/php/php7.2-fpm.sock;
+			include snippets/fastcgi-php.conf;
+			fastcgi_pass unix:/run/php/php7.2-fpm.sock;
 			fastcgi_read_timeout 300;
-			include fastcgi.conf;
 		}
 
 	}
